HW_4/kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: flask-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 8000
      - path: /db
        pathType: Prefix
        backend:
          service:
            name: postgres-ha
            port:
              number: 5432
